Fixed footer elements not aligning on wide screen

--- a/components/Layouts/FooterLayout/styles/Footer.module.scss
+++ b/components/Layouts/FooterLayout/styles/Footer.module.scss
@@ -10,10 +10,10 @@
   grid-gap: 20px;
 
   .rightElement {
-    place-self: right;
+    justify-self: right;
   }
   .leftElement {
-    place-self: left;
+    justify-self: left;
   }
 }
 
